# printify-mcp-server

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  ROADMAP.md
docs/plans/: 2026-02-23-printify-mcp-server-design.md  2026-02-23-printify-mcp-server-plan.md  2026-02-24-code-review-fixes.md
src/: auth.py  config.py  oauth_provider.py  server.py
src/services/: printify.py
src/tools/: _error_handler.py  catalog.py  images.py  orders.py  products.py  shops.py
tests/: conftest.py  test_auth.py  test_catalog.py  test_error_handler.py  test_images.py  test_oauth_provider.py  test_orders.py  test_printify_service.py  test_products.py  test_server.py  test_shops.py
